11.0.0 -
Ensure property covariance is properly handled throughout the internal model (#1713)

10.3.0 -
Update Russian translations (#1761)
Add Thai translations (#1768)
Add Azerbaijani translations (#1770)
Deprecate the old test helper methods in favour of TestValidate.
Deprecate OnFailure and OnAnyFailure callbacks.

10.2.3 - 3 Jun 2021
Resolve issue with rulesets not cascading correctly to Inheritance Validators (#1754)

10.2.2 - 1 Jun 2021
Add backwards compatibility overloads for validator registration methods.

10.2.1 - 30 May 2021
Optional internal type registration should work with MVC registration (#1748)

10.2.0 - 28 May 2021
Display name generation should be consistent between RuleForEach and RuleFor.ForEach (#1231)
Allow AddFluentValidation to be called directly on IServiceCollection (#1726)
Throw exception on ValidateAndThrow even if PreValidate prevents further Validation (#1736)
ValidationException now includes rule severity (#1733)
Optionally support internal types when scanning assemblies for validators (#1742)
Deprecate RunDefaultMvcValidationAfterFluentValidationExecutes in MVC configuration. Use DisableDataAnnotationsValidation instead.

10.1.0 - 28 April 2021
Allow default severity level to be set globally (#1715)
Extend use of variance into the internal API to resolve invalid cast exceptions in some scenarios (#1711)
Fix clientside metadata being incorrectly generated for cross-property LessThanOrEqual/GreaterThanOrEqual (#1721)

10.0.4 - 17 April 2021
Fix a bug where async conditions were sometimes run synchronously.

10.0.3 - 15 April 2021
Fix ArgumentOutOfRangeException when condition returns false for RuleForEach containing multiple components (#1698)

10.0.2 - 9 April 2021
Expose ErrorCode property on IRuleComponent.

10.0.1 - 8 April 2021
Add GetPropertyValue method to IValidationRule<T>
Fix context parameter types on IValidationRule.ApplyCondition and ApplyAsyncCondition.

10.0.0 - 6 April 2021